fix: hero image visible on mobile

--- a/styles.css
+++ b/styles.css
@@ -426,11 +426,7 @@ small {
 	outline: none;
 }
 
-@media (max-width: 768px) {
-	.hero .code {
-		display: none;
-	}
-}
+
 
 /*******************
 		ABOUT SECTION
@@ -453,7 +449,6 @@ small {
 	align-self: end;
 	justify-self: end;
 	width: 425px;
-	max-width: 100%;
 	box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.006),
 		0px 0px 5.3px rgba(0, 0, 0, 0.008), 0px 0px 10px rgba(0, 0, 0, 0.01),
 		0px 0px 17.9px rgba(0, 0, 0, 0.012), 0px 0px 33.4px rgba(0, 0, 0, 0.014),
@@ -1002,20 +997,14 @@ small {
 	}
 
 	.hero .container {
-    text-align: center;
-    position: relative;
-	}
-
-	
-	.hero img {
-    display: block;
+		text-align: center;
+		position: relative;
 	}
 
 	.hero img {
-    display: block;
-    max-width: 100%;
-    width: 100%;
-
+		display: block;
+		max-width: 100%;
+		width: 100%;
 	}
 
 	.my-skills ul {
